libs: decoder: h264: improve code-style

https://bugzilla.gnome.org/show_bug.cgi?id=786173